--- a/crosemond_data608_hw1.Rmd
+++ b/crosemond_data608_hw1.Rmd
@@ -26,31 +26,93 @@ summary(inc)
 
 Think a bit on what these summaries mean. Use the space below to add some more relevant non-visual exploratory information you think helps you understand this data:
 
-```{r}
-# Insert your code here, create more chunks as necessary
+```{r, message=FALSE, warning=FALSE}
+if("skimr" %in% rownames(installed.packages()) == FALSE) {install.packages("skimr")}
+library(skimr)
+
+if("tidyverse" %in% rownames(installed.packages()) == FALSE) {install.packages("tidyverse")}
+library(tidyverse)
+
+if("ggthemes" %in% rownames(installed.packages()) == FALSE) {install.packages("ggthemes")}
+library(ggthemes)
+
+if("scales" %in% rownames(installed.packages()) == FALSE) {install.packages("scales")}
+library(scales)
+```
+
+```{r, message=FALSE, warning=FALSE}
+skim(inc[-1]) # remove `Rank`, which is a unique identifier
 ```
 
 ## Question 1
 
 Create a graph that shows the distribution of companies in the dataset by State (ie how many are in each state). There are a lot of States, so consider which axis you should use. This visualization is ultimately going to be consumed on a 'portrait' oriented screen (ie taller than wide), which should further guide your layout choices.
 
-```{r}
-# Answer Question 1 here
+```{r, message=FALSE, warning=FALSE}
+inc %>%
+  ggplot(aes(y = fct_rev(fct_infreq(State)))) +
+    geom_bar() +
+    ggtitle("Inc. Magazine's 5,000 Fastest-Growing Private Companies in America, by state/territory") +
+    xlab("Number of companies") +
+    ylab("State/territory") +
+    theme_tufte() +
+    theme(axis.text.y= element_text(size = 7))
 ```
+
+*General comments*
+* A horizontal bar chart felt appropriate given the question and its constraints.
+* I applied the Tufte theme here and below in honor of the Week 1 discussion topic.
+* I included the axis titles given the audience is unclear. Depending on that audience, I would consider removing them from what is a relatively simple chart.
+* I combined the main title and source (Inc. Magazine) to save space.
+* Noting the cramped y-axis labels, I played around with the aspect ratio, assuming 640 x 320 pixels on a phone screen and thus a ratio of 20. There was little substantive difference from the default ratio, which I kept. Instead, I made the label text slightly smaller, which isn't ideal.
+* The number of companies tracks loosely with state/territory population.
 
 ## Question 2
 
 Lets dig in on the state with the 3rd most companies in the data set. Imagine you work for the state and are interested in how many people are employed by companies in different industries. Create a plot that shows the average and/or median employment by industry for companies in this state (only use cases with full data, use R's `complete.cases()` function.) In addition to this, your graph should show how variable the ranges are, and you should deal with outliers.
 
 ```{r}
-# Answer Question 2 here
+NY <- inc %>% filter(State == "NY" & complete.cases(inc) == TRUE) # New York based upon initial visualization
+outliers <- boxplot(NY$Employees, plot = FALSE)$out # 45 companies are identifies as outliers of the total data set's distribution of number of employees.
+NY %>%
+  filter(!(Employees %in% outliers)) %>%
+  ggplot(aes(x = Employees, y = fct_rev(Industry))) + 
+    geom_boxplot() +
+    xlab("Total company employees") +
+    ylab("Industry of company") +
+    labs(title = "Distribution of total company employees, by industry, in New York",
+         subtitle = "Source: 5,000 Fastest-Growing Private Companies in America, Inc. Magazine",
+         caption = "Note: Forty-five companies with total employment identified as outliers in the overall distribution are excluded.") +
+    theme_tufte()
 ```
+
+*General comments*
+* Horizontal boxplots felt appropriate given the question and its constraints.
+* I added a note regarding the exclusion of the forty-five outliers identified in the overall distribution of `Employees`. Given the nature of boxplots, new outliers were identified and included.
+* I included the source as a subtitle to save space in the main title.
+* There is a lot of "ink" devoted to text, but it all seems necessary for clarity. It is difficult to remove anything without knowing the specific audience (beyond perhaps another state employee).
+* Distribution spread varies substantially across industries. Notably, "Financial Services", "Software", "IT Services", and "Media" appear to show the greatest spreads in company employment.
 
 ## Question 3
 
 Now imagine you work for an investor and want to see which industries generate the most revenue per employee. Create a chart that makes this information clear. Once again, the distribution per industry should be shown.
 
 ```{r}
-# Answer Question 3 here
+inc %>% filter(complete.cases(inc) == TRUE) %>%
+  mutate(rev_per_emp = Revenue / Employees) %>%
+  ggplot(aes(x = rev_per_emp, y = fct_rev(Industry))) + 
+    geom_boxplot() +
+    xlab("Company revenue per employee ($)") +
+    ylab("Industry of company") +
+    labs(title = "Distribution of company revenue per employee ($), by industry",
+         subtitle = "Source: Inc. Magazine's 5,000 Fastest Growing Companies in the USA") +
+    scale_x_continuous(labels = comma) +
+    theme_tufte()
 ```
+
+*General comments*
+* Again, boxplots seemed like the simplest way to visualize the distributions.
+* I included outliers given the general goal is to identify the industries where they reside.
+* I reformatted the x-axis labels for clarity.
+* The "Energy" industry possesses two companies that are extreme outliers in revenue per employee (approximately $40M at each company). Other "Energy" companies are notable outliers, as are companies from "Manufacturing" and "Software".
 
